update ios version

--- a/plugins/rainlab/user/controllers/users/update.htm
+++ b/plugins/rainlab/user/controllers/users/update.htm
@@ -16,6 +16,7 @@
         <div class="layout-row">
             <?= $this->formRenderPrimaryTabs() ?>
             <?= $this->relationRender('userServices') ?>
+<!--            <?= $this->relationRender('userRates') ?>-->
         </div>
 
         <div class="form-buttons">
