--- a/plugins/skillset/marketplace/controllers/orders/update.htm
+++ b/plugins/skillset/marketplace/controllers/orders/update.htm
@@ -15,6 +15,8 @@
             <?= $this->relationRender('offerProducts', ['readOnly' => ($this->vars['formModel']->status == $this->vars['formModel']->statuses['paid'])]) ?>
             <label>საბოლოო ინვოისი</label><br><br>
             <?= $this->relationRender('orderProducts', ['readOnly' => ($this->vars['formModel']->status == $this->vars['formModel']->statuses['paid'])]) ?>
+            <label>შეკვეთის შეფასება</label><br><br>
+            <?= $this->relationRender('orderRate') ?>
         </div>
 
         <div class="form-buttons">
