--- a/plugins/skillset/orders/controllers/orders/update.htm
+++ b/plugins/skillset/orders/controllers/orders/update.htm
@@ -15,6 +15,8 @@
             <?= $this->relationRender('ordersServicesTmp', ['readOnly' => ($this->vars['formModel']->status_id == 4)]) ?>
             <label>შესრულებული სამუშაოები</label><br><br>
             <?= $this->relationRender('ordersServices', ['readOnly' => ($this->vars['formModel']->status_id == 4)]) ?>
+            <label>შეფასება</label><br><br>
+            <?= $this->relationRender('orderRate', ['order_id' => $this->params[0]]) ?>
         </div>
 
         <div class="form-buttons">
